// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable export spec for 40x20-rect 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 8,
  "columnLayout": {
    "centerWidthMm": 22.560000000000002,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2968421052631579,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 168.43971631205673,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 10,
    "labelMarkGapPx": 1,
    "markSizePx": 5,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 33,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 44,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 213,
  "testIndicatorLayout": {
    "labelFontSizePx": 15,
    "labelMarkGapPx": 1,
    "markSizePx": 27,
    "rowGapPx": 11,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 44,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.08,
  "bodyFontSizePx": 17,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 24,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 65,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 65,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 47,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 213,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 47,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 47,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 213,
  "testIndicatorLayout": {
    "labelFontSizePx": 17,
    "labelMarkGapPx": 1,
    "markSizePx": 29,
    "rowGapPx": 11,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 47,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 65,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 21,
    "labelMarkGapPx": 1,
    "markSizePx": 37,
    "rowGapPx": 15,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 65,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 20.8,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 37,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable export spec for 40x20-rounded 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 8,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 10,
    "labelMarkGapPx": 1,
    "markSizePx": 5,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 42,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 46,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": {
    "labelFontSizePx": 16,
    "labelMarkGapPx": 1,
    "markSizePx": 28,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 46,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.08,
  "bodyFontSizePx": 18,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 25,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": {
    "labelFontSizePx": 18,
    "labelMarkGapPx": 1,
    "markSizePx": 30,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 25,
    "labelMarkGapPx": 1,
    "markSizePx": 41,
    "rowGapPx": 16,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 3.4455999999999993,
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 39,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable export spec for 40x30-rect 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.924000000000002,
  "bodyFontSizePx": 12,
  "columnLayout": {
    "centerWidthMm": 22.560000000000002,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2968421052631579,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 168.43971631205673,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 12,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 65,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 44,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": {
    "labelFontSizePx": 15,
    "labelMarkGapPx": 1,
    "markSizePx": 27,
    "rowGapPx": 11,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 44,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.08,
  "bodyFontSizePx": 22,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 31,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per",
    "ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 65,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 65,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 47,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 47,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 47,
  "columnLayout": {
    "centerWidthMm": 27.880000000000003,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 9.12,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6331578947368421,
    "breakoutMarginLeftPct": -36.29842180774748,
    "breakoutWidthPct": 136.29842180774747,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": {
    "labelFontSizePx": 17,
    "labelMarkGapPx": 1,
    "markSizePx": 29,
    "rowGapPx": 11,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 47,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 65,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 24,
    "labelMarkGapPx": 1,
    "markSizePx": 40,
    "rowGapPx": 15,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 65,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 29.6,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units",
    "(5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per",
    "ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 51,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per",
    "ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable export spec for 40x30-rounded 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 14,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 14,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 46,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": {
    "labelFontSizePx": 16,
    "labelMarkGapPx": 1,
    "markSizePx": 28,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 46,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.08,
  "bodyFontSizePx": 23,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 32,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per",
    "ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": {
    "labelFontSizePx": 18,
    "labelMarkGapPx": 1,
    "markSizePx": 30,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 25,
    "labelMarkGapPx": 1,
    "markSizePx": 41,
    "rowGapPx": 16,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 6.691600000000008,
  "bodyFontSizePx": 30.400000000000002,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units",
    "(5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per",
    "ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 52,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per",
    "ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable export spec for 50x30-rect 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 591,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 3.0002000000000035,
  "bodyFontSizePx": 10,
  "columnLayout": {
    "centerWidthMm": 28.759999999999998,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 18.240000000000002,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2995833333333333,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 166.89847009735746,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 9,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 75,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 57,
  "columnLayout": {
    "centerWidthMm": 35.480000000000004,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 11.52,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6304166666666667,
    "breakoutMarginLeftPct": -35.287485907553545,
    "breakoutWidthPct": 135.28748590755353,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": {
    "labelFontSizePx": 20,
    "labelMarkGapPx": 1,
    "markSizePx": 35,
    "rowGapPx": 14,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 57,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 8.865,
  "bodyFontSizePx": 27,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 37,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 82,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 82,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 59,
  "columnLayout": {
    "centerWidthMm": 35.480000000000004,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 11.52,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6304166666666667,
    "breakoutMarginLeftPct": -35.287485907553545,
    "breakoutWidthPct": 135.28748590755353,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 59,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 59,
  "columnLayout": {
    "centerWidthMm": 35.480000000000004,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 11.52,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6304166666666667,
    "breakoutMarginLeftPct": -35.287485907553545,
    "breakoutWidthPct": 135.28748590755353,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 331,
  "testIndicatorLayout": {
    "labelFontSizePx": 22,
    "labelMarkGapPx": 1,
    "markSizePx": 36,
    "rowGapPx": 14,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 59,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 82,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 31,
    "labelMarkGapPx": 1,
    "markSizePx": 50,
    "rowGapPx": 19,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 82,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 4.026199999999976,
  "bodyFontSizePx": 33.6,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units",
    "(5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 57,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable export spec for 50x30-rounded 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 591,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 3.595333333333331,
  "bodyFontSizePx": 11,
  "columnLayout": {
    "centerWidthMm": 29.88,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 18.62,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.30489795918367346,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 163.98929049531458,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 11,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 78,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 59,
  "columnLayout": {
    "centerWidthMm": 36.74,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 11.76,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6251020408163266,
    "breakoutMarginLeftPct": -33.36962438758846,
    "breakoutWidthPct": 133.36962438758846,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": {
    "labelFontSizePx": 20,
    "labelMarkGapPx": 1,
    "markSizePx": 36,
    "rowGapPx": 15,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 59,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 8.865,
  "bodyFontSizePx": 28,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 84,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 84,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 61,
  "columnLayout": {
    "centerWidthMm": 36.74,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 11.76,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6251020408163266,
    "breakoutMarginLeftPct": -33.36962438758846,
    "breakoutWidthPct": 133.36962438758846,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 61,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 61,
  "columnLayout": {
    "centerWidthMm": 36.74,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 11.76,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6251020408163266,
    "breakoutMarginLeftPct": -33.36962438758846,
    "breakoutWidthPct": 133.36962438758846,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 343,
  "testIndicatorLayout": {
    "labelFontSizePx": 23,
    "labelMarkGapPx": 1,
    "markSizePx": 37,
    "rowGapPx": 15,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 61,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 84,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 31,
    "labelMarkGapPx": 1,
    "markSizePx": 52,
    "rowGapPx": 20,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 84,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.229799999999971,
  "bodyFontSizePx": 35.2,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units",
    "(5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 60,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable export spec for skip-default 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyBoxVerticalPadPx": 2.36,
  "bodyFontSizePx": 8,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 10,
    "labelMarkGapPx": 1,
    "markSizePx": 5,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 42,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 46,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": {
    "labelFontSizePx": 16,
    "labelMarkGapPx": 1,
    "markSizePx": 28,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 46,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyBoxVerticalPadPx": 7.08,
  "bodyFontSizePx": 18,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 25,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That Forces",
    "Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units",
    "(5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "sparse logo only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "sparse logo plus testing" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 49,
  "columnLayout": {
    "centerWidthMm": 29.14,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 9.36,
    "logoWidthPercent": 24,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.6264102564102564,
    "breakoutMarginLeftPct": -33.83665065202471,
    "breakoutWidthPct": 133.8366506520247,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 24,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 224,
  "testIndicatorLayout": {
    "labelFontSizePx": 18,
    "labelMarkGapPx": 1,
    "markSizePx": 30,
    "rowGapPx": 12,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 49,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "sparse testing only" 1`] = `
{
  "bodyBoxVerticalPadPx": 0,
  "bodyFontSizePx": 67,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "isSparse": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": {
    "labelFontSizePx": 25,
    "labelMarkGapPx": 1,
    "markSizePx": 41,
    "rowGapPx": 16,
  },
  "testIndicators": [
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "pass",
      "type": "Endotoxin",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 67,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyBoxVerticalPadPx": 3.4455999999999993,
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": 0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "isSparse": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "sparseLogoHeightPx": 0,
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 39,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;
